page de cadastro

--- a/Html-Js/pages/cadastro.html
+++ b/Html-Js/pages/cadastro.html
@@ -23,6 +23,29 @@
                     <label for="">Password</label>
                     <input type="password">
                 </div>
+                <div class="input_dividido">
+                    <div>
+                        <label for="">Idade</label>
+                        <input type="text">
+                    </div>
+                    <div>
+                        <label for="">Posição</label>
+                        <input type="text">
+                    </div>
+                </div>
+                <div class="input_dividido">
+                    <div>
+                        <label for="">Cidade</label>
+                        <input type="text">
+                    </div>
+                    <div>
+                        <label for="">URL da Foto</label>
+                        <input type="text">
+                    </div>
+                </div>
+                <div class="cadastrar">
+                    <button>Cadastrar</button>
+                </div>
             </form>
         </div>
         <div class="imagem_ilustrativa">
