--- a/Html-Js/index.html
+++ b/Html-Js/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/design/pHW3Mr2HRvevCARln81V3v/Sport-Website--Community-?node-id=0-1&embed-host=share" allowfullscreen></iframe>
+
+
 </body>
 <script src="app/app.js"></script>
 </html>
