--- a/Html-Js/pages/cadastro.html
+++ b/Html-Js/pages/cadastro.html
@@ -13,15 +13,15 @@
             <form id="formularioCadastro" class="formulario_cadastro">
                 <div>
                     <label for="">Username</label>
-                    <input id="contaUsername" type="text" re>
+                    <input id="contaUsername" type="text" required>
                 </div>
                 <div>
                     <label for="">Email</label>
-                    <input id="contaEmail" type="email">
+                    <input id="contaEmail" type="email" required>
                 </div>
                 <div>
                     <label for="">Password</label>
-                    <input id="contaSenha" type="password">
+                    <input id="contaSenha" type="password" required>
                 </div>
                 <div class="input_dividido">
                     <div>
@@ -52,6 +52,7 @@
             <img src="" alt="Jogadora">
         </div>
     </section>
+    <p>Já tem conta? <a href="login.html">Ir para login </a></p>
 </body>
 
 <script src="../app/app.js"></script>
