--- a/Html-Js/pages/login.html
+++ b/Html-Js/pages/login.html
@@ -9,34 +9,34 @@
 <body>
     <section class="tela_login">
         <div class="login">
-            <h1>Login in</h1>
+            <h1>Login </h1>
             <form class="formulario_login">
                 <div>
                     <label for="">Email adress or user name</label>
-                    <input type="text">
+                    <input id="loginUsuario" type="text">
                 </div>
                 <div>
                     <label for="">Password</label>
-                    <input type="password">
+                    <input id="loginSenha" type="password">
                 </div>
                 <div class="input_checkbox">
                     <input type="checkbox">
                     <label for="">Remember me</label>
                 </div>
                 <div class="input_checkbox">
-                    <input type="checkbox">
+                    <input type="checkbox" required>
                     <label for="">By continuing, you agree to the terms of use and Privacy Policy</label>
                 </div>
-                <div class="logar">
-                    <button>Log in</button>
+                <div id="btn-logar" class="logar">
+                    <button>Login</button>
                 </div>
             </form>
             <a href="">Esqueceu a senha?</a>
             <div class="barra"></div>
-            <a href="">Ainda não tem cadastro?</a>
+            <a href="./cadastro.html">Ainda não tem cadastro?</a>
         </div>
         <div class="imagem_ilustrativa">
-            <img src="../assets/futebol feminino-marilia-marília cruzeiro-gabi portilho-1729432441.jpg" alt="Jogadora">
+            <!-- <img src="../assets/futebol feminino-marilia-marília cruzeiro-gabi portilho-1729432441.jpg" alt="Jogadora"> -->
         </div>
     </section>
 </body>
