add id nas contas

--- a/Html-Js/pages/cadastro.html
+++ b/Html-Js/pages/cadastro.html
@@ -13,34 +13,34 @@
             <form id="formularioCadastro" class="formulario_cadastro">
                 <div>
                     <label for="contaUsername">Username</label>
-                    <input id="contaUsername" type="text" re>
+                    <input id="contaUsername" type="text" required>
                 </div>
                 <div>
                     <label for="contaEmail">Email</label>
-                    <input id="contaEmail" type="email">
+                    <input id="contaEmail" type="email" required>
                 </div>
                 <div>
                     <label for="contaSenha">Password</label>
-                    <input id="contaSenha" type="password">
+                    <input id="contaSenha" type="password" required>
                 </div>
                 <div class="input_dividido">
                     <div>
                         <label for="contaIdade">Idade</label>
-                        <input id="contaIdade" min="14" max="99" step="1" type="number">
+                        <input id="contaIdade" min="14" max="99" step="1" type="number" required>
                     </div>
                     <div>
                         <label for="contaPosicao">Posição</label>
-                        <input id="contaPosicao"type="text">
+                        <input id="contaPosicao"type="text" required>
                     </div>
                 </div>
                 <div class="input_dividido">
                     <div>
                         <label for="contaCidade">Cidade</label>
-                        <input id="contaCidade" type="text">
+                        <input id="contaCidade" type="text" required>
                     </div>
                     <div>
                         <label for="contaFoto">Foto</label>
-                        <input id="contaFoto" type="url">
+                        <input id="contaFoto" type="url" required>
                     </div>
                 </div>
                 <div class="cadastrar">
