--- a/Html-Js/pages/cadastro.html
+++ b/Html-Js/pages/cadastro.html
@@ -46,13 +46,14 @@
                 <div class="cadastrar">
                     <button>Cadastrar</button>
                 </div>
+                <p>Já tem conta? <a href="login.html">Ir para login </a></p>
             </form>
         </div>
         <div class="imagem_ilustrativa">
-            <img src="" alt="Jogadora">
+            <img src="../assets/jogadora santos.webp" alt="Jogadora">
         </div>
     </section>
-    <p>Já tem conta? <a href="login.html">Ir para login </a></p>
+    
 </body>
 
 <script src="../app/app.js"></script>
