--- a/Html-Js/index.html
+++ b/Html-Js/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connect Point</title>
     <link rel="stylesheet" href="styles/style.css">
-    <meta http-equiv="refresh" content="0; url=./pages/login.html">
 </head>
 <body>
     <!-- <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/design/pHW3Mr2HRvevCARln81V3v/Sport-Website--Community-?node-id=0-1&embed-host=share" allowfullscreen></iframe> -->
 
+    <button id="logout">sair</button>
 
 </body>
 <script src="app/app.js"></script>
