--- a/Html-Js/pages/login.html
+++ b/Html-Js/pages/login.html
@@ -1,44 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../styles/login.css">
+    <title>Login</title>
+    <link rel="stylesheet" href="../styles/login.css">    
 </head>
 <body>
     <section class="tela_login">
         <div class="login">
-            <h1>Login in</h1>
-            <form id="formularioLogin">
+            <h1>Login</h1>
+            <form id="formularioLogin" class="formulario_login">
                 <div>
-                    <label for="">Email adress or user name</label>
-                    <input type="email" id="loginEmail" placeholder="email" required>
+                    <label for="loginUsuario">Email ou Username</label>
+                    <input id="loginUsuario" type="text" required>
                 </div>
                 <div>
-                    <label for="">Password</label>
-                    <input type="password" id="loginSenha" placeholder="senha" required>
+                    <label for="loginSenha">Password</label>
+                    <input id="loginSenha" type="password" autocomplete="on" required>
                 </div>
                 <div class="input_checkbox">
-                    <input type="checkbox">
-                    <label for="">Remember me</label>
-                </div>
-                <div class="input_checkbox">
-                    <input type="checkbox">
-                    <label for="">By continuing, you agree to the terms of use and Privacy Policy</label>
+                    <input id="remember" type="checkbox">
+                    <label for="remember">Remember me</label>
                 </div>
                 <div class="logar">
-                    <button type="submit">Log in</button>
+                    <button type="submit" id="btn-logar">Login</button>
                 </div>
             </form>
-            <a href="">Esqueceu a senha?</a>
+            <a href="#">Esqueceu a senha?</a>
             <div class="barra"></div>
-            <p>Ainda não tem conta? <a href="cadastro.html">Cadastrar-se</a></p>
+            <a href="./cadastro.html">Ainda não tem cadastro?</a>
         </div>
-        <div class="imagem_ilustrativa">
-            <img src="../assets/futebol feminino-marilia-marília cruzeiro-gabi portilho-1729432441.jpg" alt="Jogadora">
-        </div>
+        <div class="imagem_ilustrativa"></div>
     </section>
-    <script src="../app/app.js"></script>
 </body>
+<script src="../app/app.js" defer></script>
 </html>
