--- a/Html-Js/pages/perfil.html
+++ b/Html-Js/pages/perfil.html
@@ -3,38 +3,66 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Painel</title>
+  <title>Meu Perfil</title>
   <link rel="stylesheet" href="../styles/perfil.css">
 </head>
 <body>
-  <button id="toggleSidebar">☰ Perfil</button>
+  <div class="container">
+    <header class="header">
+      <h1>Meu Perfil</h1>
+      <nav class="nav">
+        <a href="feed.html" class="nav-link">Ver Feed</a>
+        <button onclick="logout()" class="logout-btn">Sair</button>
+      </nav>
+    </header>
 
-  <section class="container">
-    <aside class="sidebar" id="sidebar">
-      <div class="perfil-card">
-        <img id="perfilFoto" src="../assets/default.png" alt="Foto de perfil">
-        <h2 id="perfilNome"></h2>
-        <p><strong>Email:</strong> <span id="perfilEmail"></span></p>
-        <p><strong>Idade:</strong> <span id="perfilIdade"></span></p>
-        <p><strong>Posição:</strong> <span id="perfilPosicao"></span></p>
-        <p><strong>Cidade:</strong> <span id="perfilCidade"></span></p>
+    <main class="profile-main">
+      <div class="profile-card">
+        <div class="profile-header">
+          <div class="profile-image-container">
+            <img id="perfilFoto" src="https://randomuser.me/api/portraits/women/44.jpg" alt="Foto de perfil" class="profile-image">
+            <div class="profile-badge">⚽</div>
+          </div>
+          <h2 id="perfilNome" class="profile-name">Carregando...</h2>
+          <p class="profile-status">Jogadora Ativa</p>
+        </div>
 
-        <div class="botoes">
-          <button id="btnEditar" onclick="entrarEdicao()">Editar</button>
-          <button id="btnSalvar" style="display:none;" onclick="salvarEdicao()">Salvar</button>
-          <button id="btnCancelar" style="display:none;" onclick="cancelarEdicao()">Cancelar</button>
-          <button onclick="logout()">Sair</button>
+        <div class="profile-info">
+          <div class="info-grid">
+            <div class="info-item">
+              <span class="info-label">Email</span>
+              <span id="perfilEmail" class="info-value">-</span>
+            </div>
+            <div class="info-item">
+              <span class="info-label">Idade</span>
+              <span id="perfilIdade" class="info-value">-</span>
+            </div>
+            <div class="info-item">
+              <span class="info-label">Posição</span>
+              <span id="perfilPosicao" class="info-value">-</span>
+            </div>
+            <div class="info-item">
+              <span class="info-label">Cidade</span>
+              <span id="perfilCidade" class="info-value">-</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="profile-actions">
+          <button id="btnEditar" onclick="entrarEdicao()" class="btn btn-primary">
+            Editar Perfil
+          </button>
+          <button id="btnSalvar" style="display:none;" onclick="salvarEdicao()" class="btn btn-success">
+            Salvar
+          </button>
+          <button id="btnCancelar" style="display:none;" onclick="cancelarEdicao()" class="btn btn-secondary">
+            Cancelar
+          </button>
         </div>
       </div>
-    </aside>
-
-    <main class="feed">
-      <h2>Jogadoras</h2>
-      <div class="cards-container" id="cardsFeed"></div>
     </main>
-  </section>
+  </div>
 
-  <script src="../app/app.js"></script>
   <script src="../app/perfil.js"></script>
 </body>
 </html>
