imagem cadastro ajustado

--- a/Html-Js/pages/cadastro.html
+++ b/Html-Js/pages/cadastro.html
@@ -55,7 +55,7 @@
             <a href="login.html">Faça seu login aqui</a>
         </div>
         <div class="imagem_ilustrativa">
-            <img src="" alt="Jogadora">
+            <img src="../assets/jogadora santos.webp" alt="Jogadora">
         </div>
     </section>
 </body>
