--- a/Html-Js/pages/login.html
+++ b/Html-Js/pages/login.html
@@ -33,7 +33,7 @@
             <a href="./cadastro.html">Ainda não tem cadastro?</a>
         </div>
         <div class="imagem_ilustrativa">
-            <!-- <img src="../assets/futebol feminino-marilia-marília cruzeiro-gabi portilho-1729432441.jpg" alt="Jogadora"> -->
+            <img src="../assets/futebol feminino-marilia-marília cruzeiro-gabi portilho-1729432441.jpg" alt="Jogadora"> 
         </div>
     </section>
 </body>
