--- a/Html-Js/pages/cadastro.html
+++ b/Html-Js/pages/cadastro.html
@@ -39,8 +39,8 @@
                         <input id="contaCidade" type="text" required>
                     </div>
                     <div>
-                        <label for="contaFoto">Foto</label>
-                        <input id="contaFoto" type="url" required>
+                        <label for="contaFoto">Foto (opcional)</label>
+                        <input id="contaFoto" type="url" placeholder="URL da sua foto (opcional)">
                     </div>
                 </div>
                 <div class="cadastrar">
