--- a/Html-Js/pages/perfil.html
+++ b/Html-Js/pages/perfil.html
@@ -21,7 +21,7 @@
         <div class="profile-header">
           <div class="profile-image-container">
             <img id="perfilFoto" src="https://randomuser.me/api/portraits/women/44.jpg" alt="Foto de perfil" class="profile-image">
-            <div class="profile-badge">⚽</div>
+            <div class="profile-badge"></div>
           </div>
           <h2 id="perfilNome" class="profile-name">Carregando...</h2>
           <p class="profile-status">Jogadora Ativa</p>
