Ajustes na tela de login e cadastro

--- a/Html-Js/pages/cadastro.html
+++ b/Html-Js/pages/cadastro.html
@@ -12,7 +12,7 @@
             <h1>Cadastre-se</h1>
             <form id="formularioCadastro" class="formulario_cadastro">
                 <div>
-                    <label for="contaUsername">Username</label>
+                    <label for="contaUsername">Usuário</label>
                     <input id="contaUsername" type="text" required>
                 </div>
                 <div>
@@ -20,7 +20,7 @@
                     <input id="contaEmail" type="email" required>
                 </div>
                 <div>
-                    <label for="contaSenha">Password</label>
+                    <label for="contaSenha">Senha</label>
                     <input id="contaSenha" type="password" required>
                 </div>
                 <div class="input_dividido">
@@ -48,14 +48,14 @@
                 </div>
                 <div class="input_checkbox">
                   <input id="privacyPolicy" type="checkbox" required>
-                  <label for="privacyPolicy">By continuing, you agree to the terms of use and Privacy Policy</label>
+                  <label for="privacyPolicy">Ao continuar, você concorda com os termos de uso e a Política de Privacidade</label>
                 </div>
             </form>
             <div class="barra"></div>             
             <a href="login.html">Faça seu login aqui</a>
         </div>
         <div class="imagem_ilustrativa">
-            <img src="../assets/jogadora santos.webp" alt="Jogadora">
+            <img src="../assets/futebol feminino-marilia-marília cruzeiro-gabi portilho-1729432441.jpg" alt="Jogadora">
         </div>
     </section>
 </body>
