--- a/Html-Js/pages/login.html
+++ b/Html-Js/pages/login.html
@@ -12,16 +12,16 @@
             <h1>Login </h1>
             <form id="formularioLogin" class="formulario_login">
                 <div>
-                    <label for="loginUsuario">Email adress or user name</label>
+                    <label for="loginUsuario">Usuário ou email</label>
                     <input id="loginUsuario" type="text">
                 </div>
                 <div>
-                    <label for="LoginSenha">Password</label>
+                    <label for="LoginSenha">senha</label>
                     <input id="loginSenha" type="password" autocomplete="on">
                 </div>
                 <div class="input_checkbox">
                     <input id="remember" type="checkbox">
-                    <label for="remember">Remember me</label>
+                    <label for="remember">Lembrar de mim</label>
                 </div>
 
                 <div class="logar">
@@ -33,7 +33,7 @@
             <a href="./cadastro.html">Ainda não tem cadastro?</a>
         </div>
         <div class="imagem_ilustrativa">
-            <img src="../assets/futebol feminino-marilia-marília cruzeiro-gabi portilho-1729432441.jpg" alt="Jogadora"> 
+            <img src="../assets/jogadora santos.webp" alt="Jogadora"> 
         </div>
     </section>
 </body>
